# rf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  base_mesh.cpp  base_mesh.hpp  base_texture.cpp  base_texture.hpp  camera.cpp  camera.hpp  common.hpp  free_camera.cpp  free_camera.hpp  gpu_program.cpp  gpu_program.hpp  logger.cpp  logger.hpp  mesh.cpp  mesh.hpp  mesh_generator.cpp  mesh_generator.hpp  mesh_simplifier.hpp  rf.cpp  rf.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
3party/gl3w/: glcorearb.h
gl/: gpu_program.cpp  gpu_program.hpp  mesh.cpp  mesh.hpp  texture.cpp  texture.hpp
gl_tests/: CMakeLists.txt  gpu_program_tests.cpp  main.cpp  mesh_tests.cpp  texture_tests.cpp
tests/: CMakeLists.txt  camera_tests.cpp  gpu_program_tests.cpp  main.cpp  mesh_tests.cpp  texture_tests.cpp
